@@ -1,4 +1,9 @@
 2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-39
+	* Set confdb version and contact info from confdb.version file.
+	* Update build.xml to deploy confdb.version file in the web container. 
+	
+2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-38
 	* Improvements in Jython parser.
 	- Parse operators.
